Z-index ordering was issued to resolve the anchor tag issue allowing for the navitems to be clicked even when opacity is 0. Working on implementing the fix for the logo

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a {
 a:visited { 
     text-decoration: none; 
     color: black; 
-   }
+}
 
 #particles-js {
     width: 100%;
@@ -91,23 +91,27 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 7vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
-    background: black;
+    background: #1b242f;
+    opacity: 0;
 }
 
-header.logo {
+/* (the css below is commented out because the global a css is overwriting this)
+/* header.logo {
     position: relative;
     font-weight: 700;
     color: white;
     text-decoration: none;
-    font-size: 2em;
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: 0.6s;
+} */
+
+header .logo {
+    margin-left: 50px;
 }
 
 header ul {
@@ -115,11 +119,14 @@ header ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: 25px;
 }
 
 header ul li {
     position: relative;
     list-style: none;
+    margin-right: 25px;
 }
 
 header ul li a {
@@ -138,8 +145,19 @@ header ul li a {
 }
 
 header.sticky {
-
+    transition: 0.6s;
+    padding-top: 10px;
+    opacity: 1;
 }
+
+.navitem {
+    z-index: -1;
+}
+
+.navitem.sticky{
+    z-index: 0;
+}
+
 
 #aboutpage {
     display: flex;
